Fix social feed spacing

--- a/mysite/myapp/static/frontend/css/drews_css.css
+++ b/mysite/myapp/static/frontend/css/drews_css.css
@@ -126,13 +126,13 @@ body {
 #updates {
   float: right;
   width: 23%;
-  padding-left: 10px;
+  padding-left: 18px;
   height: 55%;
   margin-top: -1%;
   overflow: auto;
   z-index: 2;
   font-family: 'Roboto', sans-serif;
-  background: #1d1824;
+  background: #131018;
   border-radius: 8px;
   border: 1px solid #3e354d;
 }
@@ -205,7 +205,7 @@ body {
 
   .postbox input {
     width: 82%;
-    background-color: #1d1824;
+    background-color: #131018;
     border-radius: 3px;
     border: 1px solid #bfcad0;
     border-right: none;
@@ -220,7 +220,7 @@ body {
     border: 1px solid #bfcad0;
     border-right: none;
     border-left: none;
-    background-color: #1d1824;
+    background-color: #131018;
     color: #bfcad0;
   }
 
